update environment files

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# creating the enviroment for this toturial and refreshing the notebook\n",
-    "# !bash bpc-dev-env.sh"
+    "!bash bpc-dev-env.sh"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "# Initialize the layout\n",
-    "layout = bids.BIDSLayout(BIDS_dataset_path, derivatives=True)\n",
+    "layout = bids.BIDSLayout(BIDS_dataset_path)\n",
     "\n",
     "# Print some basic information about the layout\n",
     "print(layout)\n",
