--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -321,7 +321,7 @@
    "outputs": [],
    "source": [
     "# define electrode of interest\n",
-    "el_interest = 'LTG7'\n",
+    "el_interest = 'LMS2'\n",
     "# epoch_size for visualization\n",
     "epoch_limits = [-1,2]"
    ]
