small textual updates

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -470,7 +470,9 @@
    "source": [
     "# 4. Calculate BPCs\n",
     "\n",
-    "Identifying basis profile curves (BPCs) that group characteristic shapes in the convergent CCEPs.\n",
+    "Identifying basis profile curves (BPCs) that group characteristic shapes in the convergent CCEPs. \n",
+    "\n",
+    "The input for the BPCs is the convergent matrix (V_pre, numpy array), the time vector (tt, numpy array), and the pandas dataframe pair_types.\n",
     "\n",
     "## 4.1 Select time-frame for BPC extraction"
    ]
