edits to clarify

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# creating the enviroment for this toturial and refreshing the notebook\n",
-    "!bash bpc-dev-env.sh"
+    "# !bash bpc-dev-env.sh"
    ]
   },
   {
@@ -351,8 +351,9 @@
     "                               (~df_events[\"electrical_stimulation_site\"].str.contains(el_interest))]\n",
     "df_include_trials.head()\n",
     "\n",
-    "# Filter channels to select good channels.\n",
-    "df_good_channels = df_channels[df_channels.status == 'good']\n",
+    "# Filter channels to select good channels, only ECOG and SEEG\n",
+    "df_good_channels = df_channels[(df_channels[\"status\"]=='good') &\n",
+    "                               ((df_channels[\"type\"]=='ECOG') | (df_channels[\"type\"]=='SEEG'))] \n",
     "# df_good_channels.head()\n",
     "\n",
     "# All Pymef operations are handled through pymef.mef_session.MefSession.\n",
@@ -409,7 +410,8 @@
     "    samples = [row.onset*srate+element*srate for element in epoch_limits] # get start and end samples\n",
     "    # Read mef3 data\n",
     "    for channel in df_electrodes.name:\n",
-    "        data = ms.read_ts_channels_sample(channel, [samples]) # Returns 1D numpy array with data from sample X to sample Y\n",
+    "        # pyMef does not apply unit conversion to microVolt, apply Natus conversion factor 0.2658 here after pyMef\n",
+    "        data = 0.2658*ms.read_ts_channels_sample(channel, [samples]) # Returns 1D numpy array with data from sample X to sample Y\n",
     "        curr_channel = {'channel': channel, 'data': data,}\n",
     "        df_data = df_data.append(curr_channel,ignore_index = True) # append to mef3 data dataframe\n",
     "    \n",
@@ -456,10 +458,39 @@
    "source": [
     "plt.figure(figsize=(10, 8), dpi=80)\n",
     "plt.imshow(V_pre, aspect='auto',extent=helper.extents(tt) + helper.extents(df_include_trials.index))\n",
-    "plt.clim(-1000, 1000)\n",
+    "plt.clim(-250, 250)\n",
     "plt.ylabel('Stimulation trial index (k)')\n",
     "plt.xlabel('Time from stimulation (s)')\n",
     "plt.title('Convergent Matrix (V)',fontsize= 15)\n",
+    "plt.colorbar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Optional baseline subtraction\n",
+    "\"\"\"\n",
+    "V_pre = np.array(V_pre)\n",
+    "\n",
+    "# calculate baseline\n",
+    "baseline_V = np.mean(V_pre[:,np.logical_and(tt > -.5,tt < -0.05)],1)\n",
+    "# make baseline into the same size\n",
+    "baseline_Vrep = np.transpose(np.tile(baseline_V,(np.shape(tt)[0],1)))\n",
+    "\n",
+    "# subtract baseline from V_pre\n",
+    "V_pre_baseSub = np.subtract(V_pre,baseline_Vrep)\n",
+    "\n",
+    "# plot \n",
+    "plt.figure(figsize=(10, 8), dpi=80)\n",
+    "plt.imshow(V_pre_baseSub, aspect='auto',extent=helper.extents(tt) + helper.extents(df_include_trials.index))\n",
+    "plt.clim(-250, 250)\n",
+    "plt.ylabel('Stimulation trial index (k)')\n",
+    "plt.xlabel('Time from stimulation (s)')\n",
+    "plt.title('Convergent Matrix (V) after baseline correction',fontsize= 15)\n",
     "plt.colorbar()"
    ]
   },
@@ -486,7 +517,7 @@
    "outputs": [],
    "source": [
     "# select the epoch times to enter in the BPC analyses in seconds\n",
-    "BPCs_epoch = [0.05,1]"
+    "BPCs_epoch = [0.015,1]"
    ]
   },
   {
@@ -506,7 +537,8 @@
    "source": [
     "# V: single-trial stimulation-evoked voltage matrix (Dimensions of V are with K total stimulation events by T total timepoints)\n",
     "# tt_BPCs: BPCs time vector\n",
-    "V,tt_BPCs = pyBPCs.bpcVoltage(V_pre,tt,BPCs_epoch) # take only Voltage at BPC times\n",
+    "V,tt_BPCs = pyBPCs.bpcVoltage(V_pre_baseSub,tt,BPCs_epoch) # take only Voltage at BPC times\n",
+    "# V,tt_BPCs = pyBPCs.bpcVoltage(V_pre,tt,BPCs_epoch) # take only Voltage at BPC times\n",
     "\n",
     "# pair_types: structure with subgroups of stimulation pairs, with fields\n",
     "#    ccep_name_1, ccep_name_2: electrodes associated with the pair, cathode-anode ordering\n",
@@ -586,8 +618,9 @@
     "\n",
     "#### Do the NMF\n",
     "\n",
-    "while nnmf_xcorr_score>.5:\n",
-    "    \n",
+    "# while nnmf_xcorr_score>.5:\n",
+    "while nnmf_xcorr_score>1:\n",
+    "  \n",
     "    cl_dim = cl_dim-1 # reduce number of inner dimensions\n",
     "    \n",
     "    if cl_dim == 0:\n",
@@ -624,7 +657,8 @@
     "    HHT = H_min @ H_min.T\n",
     "    HHT_triu = np.triu(HHT,1)\n",
     "    HHT_triu_reshaped = np.reshape(HHT_triu,(1,-1))\n",
-    "    nnmf_xcorr_score = np.max(np.reshape(HHT_triu,(1,-1))) # max of nonnegative matrix factorization component interdependencies\n",
+    "    # nnmf_xcorr_score = np.max(np.reshape(HHT_triu,(1,-1))) # max of nonnegative matrix factorization component interdependencies\n",
+    "    nnmf_xcorr_score = np.sum(np.reshape(HHT_triu,(1,-1))) # sum of off-diagonal nonnegative matrix factorization component interdependencies\n",
     "    print('Inner dimension: ', cl_dim, ', off diagonal score: ',nnmf_xcorr_score)\n",
     "\n",
     "    # save matrices and scores for plotting later\n",
@@ -738,8 +772,8 @@
     "for q in range(len(B_struct)): #  cycle through basis curves\n",
     "    plt.plot(tt[tt_BPCs[0]:tt_BPCs[1]],B_struct.curve[q],color=next(colors),label=q)\n",
     "    \n",
-    "plt.ylabel('Time from stimulation')\n",
-    "plt.xlabel('Normalized weight of BPCs')\n",
+    "plt.xlabel('Time from stimulation (s)')\n",
+    "plt.ylabel('Normalized weight of BPCs')\n",
     "plt.title('Calculated BPCs',fontsize=15)\n",
     "plt.legend()"
    ]
@@ -749,15 +783,6 @@
    "metadata": {},
    "source": [
     "## 5.2 Spatial representation of the BPCs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xyz_excluded_pairs_list"
    ]
   },
   {
