--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -287,11 +287,20 @@
    },
    "outputs": [],
    "source": [
+    "marker_colors=[]\n",
+    "\n",
     "xyz_list = df_electrodes[['x', 'y','z']].values.tolist()\n",
     "electrodeName_list = df_electrodes[['name']].name.values.tolist()\n",
     "\n",
+    "# gray out bad channels\n",
+    "for cords_name in electrodeName_list:\n",
+    "    if df_channels[df_channels.name == cords_name].status.values[0]=='good':\n",
+    "        marker_colors.append('red')\n",
+    "    else:\n",
+    "        marker_colors.append('gray')\n",
+    "\n",
     "view = plotting.view_markers(marker_coords=xyz_list, marker_labels=electrodeName_list, marker_size=7.5,\n",
-    "                             marker_color='red', title='Electrodes in MNI space rendered on a standard brain') # Insert a 3d plot of markers in a brain\n",
+    "                             marker_color=marker_colors, title='Electrodes in MNI space rendered on a standard brain') # Insert a 3d plot of markers in a brain\n",
     "view.open_in_browser()"
    ]
   },
@@ -450,21 +459,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 8), dpi=80)\n",
-    "plt.imshow(V_pre, aspect='auto',extent=helper.extents(tt) + helper.extents(df_include_trials.index))\n",
-    "plt.clim(-250, 250)\n",
-    "plt.ylabel('Stimulation trial index (k)')\n",
-    "plt.xlabel('Time from stimulation (s)')\n",
-    "plt.title('Convergent Matrix (V)',fontsize= 15)\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\"\"\"\n",
     "Optional baseline subtraction\n",
     "\"\"\"\n",
@@ -476,16 +470,34 @@
     "baseline_Vrep = np.transpose(np.tile(baseline_V,(np.shape(tt)[0],1)))\n",
     "\n",
     "# subtract baseline from V_pre\n",
-    "V_pre_baseSub = np.subtract(V_pre,baseline_Vrep)\n",
+    "V_pre_baseSub = np.subtract(V_pre,baseline_Vrep)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 10), dpi=80)\n",
     "\n",
-    "# plot \n",
-    "plt.figure(figsize=(10, 8), dpi=80)\n",
-    "plt.imshow(V_pre_baseSub, aspect='auto',extent=helper.extents(tt) + helper.extents(df_include_trials.index))\n",
-    "plt.clim(-250, 250)\n",
-    "plt.ylabel('Stimulation trial index (k)')\n",
-    "plt.xlabel('Time from stimulation (s)')\n",
-    "plt.title('Convergent Matrix (V) after baseline correction',fontsize= 15)\n",
-    "plt.colorbar()"
+    "fig.suptitle('Convergent Matrix (V)',fontsize= 15)\n",
+    "vmin=-250\n",
+    "vmax=250\n",
+    "im = ax1.imshow(V_pre, aspect='auto',extent=helper.extents(tt) + helper.extents(df_include_trials.index),vmin=vmin, vmax=vmax)\n",
+    "ax1.set_xlabel('Time from stimulation (s)')\n",
+    "ax1.set_ylabel('Stimulation trial index (k)')\n",
+    "ax1.set_title('Convergent Matrix (V)')\n",
+    "im = ax2.imshow(V_pre_baseSub, aspect='auto',extent=helper.extents(tt) + helper.extents(df_include_trials.index),vmin=vmin, vmax=vmax)\n",
+    "ax2.set_xlabel('Time from stimulation (s)')\n",
+    "ax2.set_ylabel('Stimulation trial index (k)')\n",
+    "ax2.set_title('Convergent Matrix (V) after baseline correction')\n",
+    "\n",
+    "fig.subplots_adjust(right=0.8)\n",
+    "cbar_ax = fig.add_axes([0.85, 0.15, 0.05, 0.7])\n",
+    "fig.colorbar(im, cax=cbar_ax)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -562,7 +574,9 @@
     "plt.ylabel('stimulation pair subgroup')\n",
     "plt.xlabel('stimulation pair subgroup')\n",
     "plt.title('Significance matrix '+r'$\\Xi$',fontsize= 15)\n",
-    "plt.colorbar()"
+    "plt.colorbar()\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -651,8 +665,8 @@
     "    HHT = H_min @ H_min.T\n",
     "    HHT_triu = np.triu(HHT,1)\n",
     "    HHT_triu_reshaped = np.reshape(HHT_triu,(1,-1))\n",
-    "    # nnmf_xcorr_score = np.max(np.reshape(HHT_triu,(1,-1))) # max of nonnegative matrix factorization component interdependencies\n",
-    "    nnmf_xcorr_score = np.sum(np.reshape(HHT_triu,(1,-1))) # sum of off-diagonal nonnegative matrix factorization component interdependencies\n",
+    "    # nnmf_xcorr_score = np.max(HHT_triu_reshaped) # max of nonnegative matrix factorization component interdependencies\n",
+    "    nnmf_xcorr_score = np.sum(HHT_triu_reshaped) # sum of off-diagonal nonnegative matrix factorization component interdependencies\n",
     "    print('Inner dimension: ', cl_dim, ', off diagonal score: ',nnmf_xcorr_score)\n",
     "\n",
     "    # save matrices and scores for plotting later\n",
@@ -769,7 +783,9 @@
     "plt.xlabel('Time from stimulation (s)')\n",
     "plt.ylabel('Normalized weight of BPCs')\n",
     "plt.title('Calculated BPCs',fontsize=15)\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -795,15 +811,12 @@
     "for cords in xyz_list:\n",
     "    marker_colors.append('white')\n",
     "    marker_sizes.append(7.5)\n",
-    "    \n",
-    "# non-significant stim pair sites\n",
-    "xyz_excluded_pairs_list = xyz.iloc[excluded_pairs[0]].values.tolist()\n",
-    "electrodeName_excluded_pairs_list = df_electrodes[['name']].iloc[excluded_pairs[0]].name.values.tolist()\n",
-    "for cords in xyz_excluded_pairs_list:\n",
-    "    marker_colors.append('gray')\n",
-    "    marker_sizes.append(7.5)\n",
-    "    \n",
-    "xyz_all = [y for x in [xyz_list, xyz_excluded_pairs_list] for y in x]\n",
+    "\n",
+    "# el_interest\n",
+    "xyz_el_interest = df_electrodes.loc[df_electrodes.name == el_interest_nr.name.values[0]][['x', 'y','z']]\n",
+    "xyz_list.append(xyz_el_interest.values[0].tolist())\n",
+    "marker_colors.append('black')\n",
+    "marker_sizes.append(20)\n",
     "\n",
     "pair_types['interpolated_locs'] = ''\n",
     "\n",
@@ -811,6 +824,14 @@
     "    xyz_1 = xyz.iloc[pair_types.ccep_num_1[index]].values.tolist()\n",
     "    xyz_2 = xyz.iloc[pair_types.ccep_num_2[index]].values.tolist()\n",
     "    pair_types.interpolated_locs[index] = np.mean((xyz_1,xyz_2),axis=0).tolist()\n",
+    "\n",
+    "# non-significant stim pair sites    \n",
+    "interpolated_locs_list = pair_types.iloc[excluded_pairs[0]].interpolated_locs.values.tolist()\n",
+    "for cords in interpolated_locs_list:\n",
+    "    marker_colors.append('gray')\n",
+    "    marker_sizes.append(7.5)\n",
+    "    \n",
+    "xyz_all = [y for x in [xyz_list, interpolated_locs_list] for y in x]\n",
     "\n",
     "# plot BPCs, colored\n",
     "colors = iter(cm.tab10(np.linspace(0, 1, 10)))\n",
@@ -841,13 +862,6 @@
     "\n",
     "You can also select a different electrode in Section 3 to look at the various inputs into different regions."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -866,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
