--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "Method developed in Matlab by Kai J. Miller, available at Miller KJ, Mueller KR, Hermes D. Basis profile curve identification to understand electrical stimulation effects in human brain networks. doi: https://doi.org/10.1101/2021.01.24.428020\n",
     "\n",
+    "This project was supported by the National Institute Of Mental Health of the National Institutes of Health under Award Number R01MH122258. The content is solely the responsibility of the authors and does not necessarily represent the official views of the National Institutes of Health\n",
+    "\n",
     "This Jupyter Notebook was written by Tal Pal Attia, Harvey Huang and Dora Hermes (2021)."
    ]
   },
@@ -133,7 +135,7 @@
    "source": [
     "# 2. Loading and checking the BIDS data and metadata\n",
     "\n",
-    "An example CCEP dataset is available on OpenNeuro ([link](https://openneuro.org/datasets/ds003708)). This dataset is formatted according to the Brain Imaging Data Structure (BIDS) and contains one subject to work with in this tutorial. \n",
+    "An example CCEP dataset is available on OpenNeuro ([link](https://openneuro.org/datasets/ds003708)). This dataset is formatted according to the Brain Imaging Data Structure ([BIDS](https://bids.neuroimaging.io/)) and contains one subject to work with in this tutorial. \n",
     "\n",
     "This dataset includes an electrocorticography (ECoG) dataset with single pulse stimulation, and accompanying metadata, such as electrode positions, channel information, stimulation events etc."
    ]
@@ -325,7 +327,7 @@
    "outputs": [],
    "source": [
     "# define electrode of interest\n",
-    "el_interest = 'LMS2'\n",
+    "el_interest = 'LPS2'\n",
     "# epoch_size for visualization\n",
     "epoch_limits = [-1,2]"
    ]
@@ -460,7 +462,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Optional baseline subtraction\n",
+    "Calculate baseline subtraction and plot difference\n",
     "\"\"\"\n",
     "V_pre = np.array(V_pre)\n",
     "\n",
@@ -470,15 +472,8 @@
     "baseline_Vrep = np.transpose(np.tile(baseline_V,(np.shape(tt)[0],1)))\n",
     "\n",
     "# subtract baseline from V_pre\n",
-    "V_pre_baseSub = np.subtract(V_pre,baseline_Vrep)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "V_pre_baseSub = np.subtract(V_pre,baseline_Vrep)\n",
+    "\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 10), dpi=80)\n",
     "\n",
     "fig.suptitle('Convergent Matrix (V)',fontsize= 15)\n",
@@ -544,6 +539,8 @@
     "# V: single-trial stimulation-evoked voltage matrix (Dimensions of V are with K total stimulation events by T total timepoints)\n",
     "# tt_BPCs: BPCs time vector\n",
     "V,tt_BPCs = pyBPCs.bpcVoltage(V_pre_baseSub,tt,BPCs_epoch) # take only Voltage at BPC times\n",
+    "\n",
+    "# You can compare results to taking the V_pre matrix before baseline correction, just to test\n",
     "# V,tt_BPCs = pyBPCs.bpcVoltage(V_pre,tt,BPCs_epoch) # take only Voltage at BPC times\n",
     "\n",
     "# pair_types: structure with subgroups of stimulation pairs, with fields\n",
@@ -862,6 +859,13 @@
     "\n",
     "You can also select a different electrode in Section 3 to look at the various inputs into different regions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -880,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
