Fixed dataframe append

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -247,17 +247,17 @@
     "             mefName = os.path.join(root, directory)\n",
     "print('We will load the following iEEG data:',mefName)\n",
     "                \n",
-    "dataJson = layout.get(subject=bids_sub,session=bids_ses,run=bids_run, task=bids_task,suffix='ieeg',extension=\"json\")[0]\n",
-    "# print('\\nSidecar JSON (*_ieeg.json):',dataJson)\n",
+    "dataJson = layout.get(subject=bids_sub, session=bids_ses, run=bids_run, task=bids_task, suffix='ieeg', extension=\"json\")[0]\n",
+    "# print('\\nSidecar JSON (*_ieeg.json):', dataJson)\n",
     "\n",
-    "channels_tsv_name = layout.get(subject=bids_sub,session=bids_ses,run=bids_run, task=bids_task,suffix='channels',extension = \"tsv\")[0]\n",
-    "# print('\\nChannels description (*_channels.tsv):',channels_tsv_name)\n",
+    "channels_tsv_name = layout.get(subject=bids_sub, session=bids_ses, run=bids_run, task=bids_task, suffix='channels', extension = \"tsv\")[0]\n",
+    "# print('\\nChannels description (*_channels.tsv):', channels_tsv_name)\n",
     "\n",
-    "events_tsv_name = layout.get(subject=bids_sub,session=bids_ses,run=bids_run, task=bids_task,suffix='events',extension = \"tsv\")[0]\n",
-    "# print('\\nevents_tsv_name:',events_tsv_name)\n",
+    "events_tsv_name = layout.get(subject=bids_sub, session=bids_ses, run=bids_run, task=bids_task, suffix='events', extension = \"tsv\")[0]\n",
+    "# print('\\nevents_tsv_name:', events_tsv_name)\n",
     "\n",
-    "electrodes_tsv_name = layout.get(subject=bids_sub,session=bids_ses,suffix='electrodes',space = bids_space,extension = \"tsv\")[0]\n",
-    "# print('\\nElectrode description (*_electrodes.tsv):',electrodes_tsv_name)\n"
+    "electrodes_tsv_name = layout.get(subject=bids_sub, session=bids_ses, suffix='electrodes', space = bids_space, extension = \"tsv\")[0]\n",
+    "# print('\\nElectrode description (*_electrodes.tsv):', electrodes_tsv_name)\n"
    ]
   },
   {
@@ -403,7 +403,7 @@
     }
    ],
    "source": [
-    "df_channels = channels_tsv_name.get_df() #  Get file contents as a pandas DataFrame (only works for TSV files)\n",
+    "df_channels = channels_tsv_name.get_df()  # Get file contents as a pandas DataFrame (only works for TSV files)\n",
     "# np.shape(df_channels)\n",
     "df_channels.head(5)"
    ]
@@ -583,7 +583,7 @@
     }
    ],
    "source": [
-    "df_events = events_tsv_name.get_df() #  Get file contents as a pandas DataFrame (only works for TSV files)\n",
+    "df_events = events_tsv_name.get_df()  # Get file contents as a pandas DataFrame (only works for TSV files)\n",
     "df_events.head()"
    ]
   },
@@ -705,7 +705,7 @@
     }
    ],
    "source": [
-    "df_electrodes = electrodes_tsv_name.get_df() #  Get file contents as a pandas DataFrame (only works for TSV files)\n",
+    "df_electrodes = electrodes_tsv_name.get_df()  # Get file contents as a pandas DataFrame (only works for TSV files)\n",
     "df_electrodes.head()"
    ]
   },
@@ -731,7 +731,7 @@
     "\n",
     "# gray out bad channels\n",
     "for cords_name in electrodeName_list:\n",
-    "    if df_channels[df_channels.name == cords_name].status.values[0]=='good':\n",
+    "    if df_channels[df_channels.name == cords_name].status.values[0] == 'good':\n",
     "        marker_colors.append('red')\n",
     "    else:\n",
     "        marker_colors.append('gray')\n",
@@ -806,8 +806,8 @@
     "df_include_trials.head()\n",
     "\n",
     "# Filter channels to select good channels, only ECOG and SEEG\n",
-    "df_good_channels = df_channels[(df_channels[\"status\"]=='good') &\n",
-    "                               ((df_channels[\"type\"]=='ECOG') | (df_channels[\"type\"]=='SEEG'))] \n",
+    "df_good_channels = df_channels[(df_channels[\"status\"] == 'good') &\n",
+    "                               ((df_channels[\"type\"] == 'ECOG') | (df_channels[\"type\"] == 'SEEG'))] \n",
     "# df_good_channels.head()\n",
     "\n",
     "# All Pymef operations are handled through pymef.mef_session.MefSession.\n",
@@ -819,7 +819,7 @@
     "# To obtain information about time series channels we can use the Pymef function read_ts_channel_basic_info()\n",
     "# ms.read_ts_channel_basic_info()\n",
     "\n",
-    "print('Sampling frequency is',srate,'Hz')"
+    "print('Sampling frequency is', srate, 'Hz')"
    ]
   },
   {
@@ -863,40 +863,40 @@
     "We iterate through all trials with electrical stimulation, no artifacts and not stimulating the recorded electrode of interest.\n",
     "\"\"\"\n",
     "\n",
-    "df_cceps = pd.DataFrame(columns = ['ccep_name_1','ccep_num_1','ccep_status_1','ccep_name_2','ccep_num_2','ccep_status_2'])\n",
-    "V_pre = [] # single-trial stimulation-evoked voltage matrix\n",
+    "df_cceps = pd.DataFrame(columns = ['ccep_name_1', 'ccep_num_1', 'ccep_status_1', 'ccep_name_2', 'ccep_num_2', 'ccep_status_2'])\n",
+    "V_pre = []  # single-trial stimulation-evoked voltage matrix\n",
     "\n",
     "for index, row in tqdm(df_include_trials.iloc[:].iterrows(), desc='Included trials', total=df_include_trials.shape[0]):\n",
     "    \n",
-    "    df_data = pd.DataFrame(columns = ['channel','data']) # dataframe for mef3 data\n",
-    "    samples = [row.onset*srate+element*srate for element in epoch_limits] # get start and end samples\n",
+    "    df_data = pd.DataFrame(columns = ['channel', 'data']) # dataframe for mef3 data\n",
+    "    samples = [row.onset * srate + element * srate for element in epoch_limits]  # get start and end samples\n",
     "    # Read mef3 data\n",
     "    for channel in df_electrodes.name:\n",
     "        # pyMef does not apply unit conversion to microVolt, apply Natus conversion factor 0.2658 here after pyMef\n",
-    "        data = 0.2658*ms.read_ts_channels_sample(channel, [samples]) # Returns 1D numpy array with data from sample X to sample Y\n",
-    "        curr_channel = {'channel': channel, 'data': data,}\n",
-    "        df_data = df_data.append(curr_channel,ignore_index = True) # append to mef3 data dataframe\n",
+    "        data = 0.2658 * ms.read_ts_channels_sample(channel, [samples])  # Returns 1D numpy array with data from sample X to sample Y\n",
+    "        curr_channel = pd.DataFrame({'channel': channel, 'data': [data]})\n",
+    "        df_data = pd.concat([df_data, curr_channel], ignore_index=True)  # append to mef3 data dataframe\n",
     "    \n",
     "    # Get stimulated channels\n",
     "    trial_ccep_names = row.electrical_stimulation_site.split(\"-\")\n",
-    "    curr_ccep = {'ccep_name_1':trial_ccep_names[0],\n",
-    "                 'ccep_num_1':df_channels.index[df_channels['name'] == trial_ccep_names[0]].tolist()[0],\n",
-    "                 'ccep_status_1': df_channels['status'][df_channels.index[df_channels['name'] == trial_ccep_names[0]].tolist()[0]],\n",
-    "                 'ccep_name_2':trial_ccep_names[1],\n",
-    "                 'ccep_num_2':df_channels.index[df_channels['name'] == trial_ccep_names[1]].tolist()[0],\n",
-    "                 'ccep_status_2': df_channels['status'][df_channels.index[df_channels['name'] == trial_ccep_names[1]].tolist()[0]],\n",
+    "    curr_ccep = pd.DataFrame({ 'ccep_name_1': [trial_ccep_names[0]],\n",
+    "                               'ccep_num_1': [df_channels.index[df_channels['name'] == trial_ccep_names[0]].tolist()[0]],\n",
+    "                               'ccep_status_1': [df_channels['status'][df_channels.index[df_channels['name'] == trial_ccep_names[0]].tolist()[0]]],\n",
+    "                               'ccep_name_2': [trial_ccep_names[1]],\n",
+    "                               'ccep_num_2': [df_channels.index[df_channels['name'] == trial_ccep_names[1]].tolist()[0]],\n",
+    "                               'ccep_status_2': [df_channels['status'][df_channels.index[df_channels['name'] == trial_ccep_names[1]].tolist()[0]]],\n",
     "                }\n",
-    "    df_cceps = df_cceps.append(curr_ccep,ignore_index = True)\n",
+    "    df_cceps = pd.concat([df_cceps, curr_ccep], ignore_index=True)\n",
     "\n",
     "    # Delete current electrical stimulation site from dataFrame\n",
-    "    curr_indexes = df_good_channels[(df_good_channels['name']==curr_ccep['ccep_name_1']) | (df_good_channels['name']==curr_ccep['ccep_name_2'])].index\n",
-    "    df_incl_channels = df_good_channels[~df_good_channels.index.isin(curr_indexes)]\n",
+    "    curr_indices = df_good_channels[df_good_channels['name'].isin([trial_ccep_names[0], trial_ccep_names[1]])].index\n",
+    "    df_incl_channels = df_good_channels[~df_good_channels.index.isin(curr_indices)]\n",
     "    \n",
     "    # Run the custom function ccep_CAR64blocks() in functions/pyBPCs.py\n",
-    "    df_data_CAR = pyBPCs.ccep_CAR64blocks(df_data,tt,df_incl_channels)\n",
+    "    df_data_CAR = pyBPCs.ccep_CAR64blocks(df_data, tt, df_incl_channels)\n",
     "    \n",
     "    # append to single-trial stimulation-evoked voltage matrix\n",
-    "    V_pre.append((df_data_CAR[df_data_CAR['channel']==el_interest]['data'].values)[0])"
+    "    V_pre.append(df_data_CAR[df_data_CAR['channel'] == el_interest]['data'].values[0])"
    ]
   },
   {
