Fix closing parenthesis

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -884,8 +884,7 @@
     "                               'ccep_status_1': [df_channels['status'][df_channels.index[df_channels['name'] == trial_ccep_names[0]].tolist()[0]]],\n",
     "                               'ccep_name_2': [trial_ccep_names[1]],\n",
     "                               'ccep_num_2': [df_channels.index[df_channels['name'] == trial_ccep_names[1]].tolist()[0]],\n",
-    "                               'ccep_status_2': [df_channels['status'][df_channels.index[df_channels['name'] == trial_ccep_names[1]].tolist()[0]]],\n",
-    "                }\n",
+    "                               'ccep_status_2': [df_channels['status'][df_channels.index[df_channels['name'] == trial_ccep_names[1]].tolist()[0]]]})\n",
     "    df_cceps = pd.concat([df_cceps, curr_ccep], ignore_index=True)\n",
     "\n",
     "    # Delete current electrical stimulation site from dataFrame\n",
