Prevent more pandas warnings

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -507,7 +507,7 @@
    "outputs": [],
    "source": [
     "# select the epoch times to enter in the BPC analyses in seconds\n",
-    "BPCs_epoch = [0.015,1]"
+    "BPCs_epoch = [0.015, 1]"
    ]
   },
   {
@@ -527,31 +527,31 @@
    "source": [
     "# V: single-trial stimulation-evoked voltage matrix (Dimensions of V are with K total stimulation events by T total timepoints)\n",
     "# tt_BPCs: BPCs time vector\n",
-    "V,tt_BPCs = pyBPCs.bpcVoltage(V_pre_baseSub,tt,BPCs_epoch) # take only Voltage at BPC times\n",
+    "V, tt_BPCs = pyBPCs.bpcVoltage(V_pre_baseSub, tt, BPCs_epoch)  # take only Voltage at BPC times\n",
     "\n",
     "# You can compare results to taking the V_pre matrix before baseline correction, just to test\n",
-    "# V,tt_BPCs = pyBPCs.bpcVoltage(V_pre,tt,BPCs_epoch) # take only Voltage at BPC times\n",
+    "# V, tt_BPCs = pyBPCs.bpcVoltage(V_pre, tt, BPCs_epoch)  # take only Voltage at BPC times\n",
     "\n",
     "# pair_types: structure with subgroups of stimulation pairs, with fields\n",
     "#    ccep_name_1, ccep_name_2: electrodes associated with the pair, cathode-anode ordering\n",
     "#    indices: indices of subgroup in V matrix (out of K total stims)\n",
     "\n",
-    "pair_types = df_cceps.groupby(['ccep_name_1','ccep_num_1','ccep_name_2','ccep_num_2']).size().reset_index().rename(columns={0:'count'})\n",
+    "pair_types = df_cceps.groupby(['ccep_name_1', 'ccep_num_1', 'ccep_name_2', 'ccep_num_2']).size().reset_index().rename(columns={0: 'count'})\n",
     "pair_types = pair_types.sort_values(by=['ccep_num_1']) \n",
-    "pair_types['indices'] = ''\n",
     "\n",
+    "indices_column = []\n",
     "for index, row in pair_types.iterrows():\n",
-    "    indices = df_cceps.index[(df_cceps['ccep_name_1'] == row['ccep_name_1']) & (df_cceps['ccep_name_2'] == row['ccep_name_2'])].tolist()\n",
-    "    pair_types['indices'].loc[index] = indices\n",
+    "    indices_column.append(df_cceps.index[(df_cceps['ccep_name_1'] == row['ccep_name_1']) & (df_cceps['ccep_name_2'] == row['ccep_name_2'])].tolist())\n",
+    "pair_types['indices'] = indices_column\n",
     "\n",
     "pair_types = pair_types.reset_index(drop=True)\n",
     "# pair_types.head()\n",
     "\n",
     "### calculate\n",
-    "V0 = V/(np.ones((V.shape[0], 1)) * (np.sum(V**2,axis=0)**0.5)) # normalize (L2 norm) each trial\n",
-    "P = V0.T @ V # calculate internal projections\n",
+    "V0 = V/(np.ones((V.shape[0], 1)) * (np.sum(V ** 2, axis=0) ** 0.5))  # normalize (L2 norm) each trial\n",
+    "P = V0.T @ V  # calculate internal projections\n",
     "\n",
-    "tmat = pyBPCs.nativeNormalized(pair_types,P)\n",
+    "tmat = pyBPCs.nativeNormalized(pair_types, P)\n",
     "\n",
     "# visualize the set of native normalized single stimulation cross-projections \n",
     "plt.figure(figsize=(10, 8), dpi=80)\n",
