Fix deprecated append

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -603,18 +603,18 @@
     "t0[t0 < 0] = 0 # factorize t-matrix, but first make non-negative\n",
     "\n",
     "# Globally rescale data to avoid potential overflow/underflow\n",
-    "t0_scaled = t0/(np.max(t0))    \n",
+    "t0_scaled = t0 / (np.max(t0))    \n",
     "\n",
-    "nnmf_xcorr_score = 100; # start off-diagonal penalty score out with high value\n",
+    "nnmf_xcorr_score = 100  # start off-diagonal penalty score out with high value\n",
     "\n",
-    "WH_struct = pd.DataFrame(columns=['W','H','nnmf_xcorr_score']) # saving structure\n",
+    "WH_struct = pd.DataFrame(columns=['W', 'H', 'nnmf_xcorr_score'])  # saving structure\n",
     "\n",
     "#### Do the NMF\n",
     "\n",
-    "# while nnmf_xcorr_score>.5:\n",
-    "while nnmf_xcorr_score>1:\n",
+    "#while nnmf_xcorr_score >. 5:\n",
+    "while nnmf_xcorr_score > 1:\n",
     "  \n",
-    "    cl_dim = cl_dim-1 # reduce number of inner dimensions\n",
+    "    cl_dim = cl_dim - 1 # reduce number of inner dimensions\n",
     "    \n",
     "    if cl_dim == 0:\n",
     "        break\n",
@@ -642,20 +642,21 @@
     "    H_min = tmp_mat_H[k_ind]\n",
     "\n",
     "    # Normalize so rows of H have unit norm\n",
-    "    Hnorms = np.sqrt(np.sum(H_min.T**2,axis=0))\n",
+    "    Hnorms = np.sqrt(np.sum(H_min.T ** 2, axis=0))\n",
     "    Hnorms_ = (np.reshape(np.tile(Hnorms.T, t0_scaled.shape[1]),(-1, Hnorms.shape[0]))).T\n",
-    "    H_min = H_min/Hnorms_\n",
+    "    H_min = H_min / Hnorms_\n",
     "\n",
     "    # Score for this decomposition - off diagonal element weights\n",
     "    HHT = H_min @ H_min.T\n",
-    "    HHT_triu = np.triu(HHT,1)\n",
-    "    HHT_triu_reshaped = np.reshape(HHT_triu,(1,-1))\n",
+    "    HHT_triu = np.triu(HHT, 1)\n",
+    "    HHT_triu_reshaped = np.reshape(HHT_triu, (1,-1))\n",
     "    # nnmf_xcorr_score = np.max(HHT_triu_reshaped) # max of nonnegative matrix factorization component interdependencies\n",
     "    nnmf_xcorr_score = np.sum(HHT_triu_reshaped) # sum of off-diagonal nonnegative matrix factorization component interdependencies\n",
-    "    print('Inner dimension: ', cl_dim, ', off diagonal score: ',nnmf_xcorr_score)\n",
+    "    print('Inner dimension: ', cl_dim, ', off diagonal score: ', nnmf_xcorr_score)\n",
     "\n",
     "    # save matrices and scores for plotting later\n",
-    "    WH_struct = WH_struct.append({'W': W_min, 'H': H_min,'nnmf_xcorr_score':nnmf_xcorr_score}, ignore_index=True)"
+    "    curr_WH = pd.DataFrame({'W': [W_min], 'H': [H_min], 'nnmf_xcorr_score': [nnmf_xcorr_score]})\n",
+    "    WH_struct = pd.concat([WH_struct, curr_WH], ignore_index=True)"
    ]
   },
   {
@@ -678,13 +679,13 @@
     " -- since all equal would be 1/sqrt(length(pair_types))\n",
     "\"\"\"\n",
     "\n",
-    "H0 = 0*H_min\n",
+    "H0 = 0 * H_min\n",
     "\n",
     "for k in range(len(pair_types)):\n",
-    "    k_ind = np.argmax(H_min,axis=0)[k]\n",
+    "    k_ind = np.argmax(H_min, axis=0)[k]\n",
     "    H0[k_ind][k] = H_min[k_ind][k]\n",
     "\n",
-    "H0_ = H0>1/(2*np.sqrt(len(pair_types)))"
+    "H0_ = H0 > 1 / (2 * np.sqrt(len(pair_types)))"
    ]
   },
   {
@@ -716,24 +717,24 @@
     "        for i in (pair_types['indices'][k]).values:\n",
     "            cl_inds.extend(i)\n",
     "\n",
-    "    V_tmp = V[:,cl_inds]\n",
+    "    V_tmp = V[:, cl_inds]\n",
     "\n",
     "    E = pyBPCs.kpca(V_tmp)\n",
-    "    B_tmp = E[:,0] # basis vector is 1st PC\n",
+    "    B_tmp = E[:, 0] # basis vector is 1st PC\n",
     "\n",
-    "    if np.mean(B_tmp.T @ V_tmp)<0:\n",
+    "    if np.mean(B_tmp.T @ V_tmp) < 0:\n",
     "        B_tmp = -B_tmp\n",
     "    \n",
-    "    B_struct = B_struct.append({'curve': B_tmp, 'pairs':cl_pg[0]}, ignore_index=True)\n",
+    "    B_struct = B_struct.append({'curve': B_tmp, 'pairs': cl_pg[0]}, ignore_index=True)\n",
     "    \n",
     "# pairs not represented by any basis\n",
-    "excluded_pairs = np.where(1-(np.sum(H0_,axis=0)))\n",
+    "excluded_pairs = np.where(1 - (np.sum(H0_, axis=0)))\n",
     "\n",
     "\"\"\"\n",
     "Calculate statistics for each basis curve, eliminating those where there is no significant representation\n",
     "\"\"\"\n",
     "\n",
-    "B_struct = pyBPCs.curvesStatistics(B_struct,V,B,pair_types)\n",
+    "B_struct = pyBPCs.curvesStatistics(B_struct, V, B, pair_types)\n",
     "\n",
     "\"\"\"\n",
     "Calculate projection weights\n",
@@ -763,7 +764,7 @@
     "\n",
     "plt.figure(figsize=(10, 8), dpi=80)\n",
     "for q in range(len(B_struct)): #  cycle through basis curves\n",
-    "    plt.plot(tt[tt_BPCs[0]:tt_BPCs[1]],B_struct.curve[q],color=next(colors),label=q)\n",
+    "    plt.plot(tt[tt_BPCs[0]:tt_BPCs[1]], B_struct.curve[q], color=next(colors), label=q)\n",
     "    \n",
     "plt.xlabel('Time from stimulation (s)')\n",
     "plt.ylabel('Normalized weight of BPCs')\n",
@@ -808,7 +809,7 @@
     "for index, row in pair_types.iterrows():\n",
     "    xyz_1 = xyz.iloc[pair_types.ccep_num_1[index]].values.tolist()\n",
     "    xyz_2 = xyz.iloc[pair_types.ccep_num_2[index]].values.tolist()\n",
-    "    pair_types.interpolated_locs[index] = np.mean((xyz_1,xyz_2),axis=0).tolist()\n",
+    "    pair_types.interpolated_locs[index] = np.mean((xyz_1, xyz_2),axis=0).tolist()\n",
     "\n",
     "# non-significant stim pair sites    \n",
     "interpolated_locs_list = pair_types.iloc[excluded_pairs[0]].interpolated_locs.values.tolist()\n",
@@ -829,7 +830,7 @@
     "    curr_color = next(colors)\n",
     "    for ind_cords in range(len(xyz_BPC_list)):\n",
     "        marker_colors.append(curr_color)\n",
-    "        marker_sizes.append(B_struct.plotweights[q][ind_cords]*25)\n",
+    "        marker_sizes.append(B_struct.plotweights[q][ind_cords] * 25)\n",
     "\n",
     "# plot all\n",
     "view = plotting.view_markers(marker_coords=xyz_all,marker_size=marker_sizes, # marker_labels=electrodeName_list,\n",
