Fix deprecated append for B_struct

--- a/bpc_interactive.ipynb
+++ b/bpc_interactive.ipynb
@@ -725,7 +725,8 @@
     "    if np.mean(B_tmp.T @ V_tmp) < 0:\n",
     "        B_tmp = -B_tmp\n",
     "    \n",
-    "    B_struct = B_struct.append({'curve': B_tmp, 'pairs': cl_pg[0]}, ignore_index=True)\n",
+    "    curr_B = pd.DataFrame({'curve': [B_tmp], 'pairs': [cl_pg[0]]})\n",
+    "    B_struct = pd.concat([B_struct, curr_B], ignore_index=True)\n",
     "    \n",
     "# pairs not represented by any basis\n",
     "excluded_pairs = np.where(1 - (np.sum(H0_, axis=0)))\n",
